Fixed input stretching issue and added image credit to specific photographer

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ button.add-to-do {
 label {
   display: flex;
   align-items: center;
+  line-break: anywhere;
 }
 input[type="text"] {
   width: 100%;
@@ -82,7 +83,7 @@ input[type="checkbox"] {
   -webkit-appearance: none;
   border-radius: 50%;
   border: 3px solid #151617;
-  width: 15px;
+  min-width: 15px;
   height: 15px;
   margin-right: 10px;
 }
